variables.RunFour.scala.error
Compilation error:
RunFour:4: error: ';' expected but 'else' found.
}else{
 ^