variables.RunFour.scala.code
var baggle:Int=0
while(!isOverBaggle()){
  forward();
}else{
  baggle+=1
}
while(baggle!=4){
  forward();
}